# mds

./: .gitignore  README.md  conf.yml  go.mod  go.sum  install.sh  mds.go  test.http
api/: file.go  router.go  web.go
api/conf/: conf.go  conf.yml.template
api/model/: db.go  file.go
cmd/: test.go
cmd/atest/: test.go
cmd/base64/: base.cpp
cmd/base64/bigint/: CMakeLists.txt  bigint.cpp  bigint.h
cmd/cli/: client.go
cmd/compress/: compress.cpp  compress.h
cmd/compress-plug/: CMakeLists.txt
cmd/compress-plug/head/: base.h  bigint.h  compress.h
cmd/compress-plug/src/: base.cpp  bigint.cpp  compress.cpp  main.cpp
cmd/compress/gzip/: gzip.cpp
cmd/compress/lz4/: lz4.cpp
cmd/coroutine.X20/: coroutine.cpp  coroutinev2.cpp
cmd/crawler/: client.go
cmd/filesvr/: filesvr.go
cmd/lz4/: lz4.cpp
cmd/rpcsvr/: server.go
cmd/sqlparse/: sql.cpp  sqlv2.cpp  sqlv3.cpp
cmd/tcpcli/: cli.cpp  cli.go
cmd/tcpsvr/: svr.cpp  svr.go
cmd/threadpool/: demo.cpp  poolx.cpp
cmd/xdr/: server.go
cmd/zmq.push.pull/: cli.cpp  pull.cpp  push.cpp  svr.cpp
cmd/zmqdemo/: CMakeLists.txt  cli.cpp  ecli.cpp  readme.md  svr.cpp
cmd/zmqdemo/src/: main.cpp
cmd/zmqgo/: cli.go
cmd/zmqhandle/: CMakeLists.txt
cmd/zmqhandle/head/: order.h  pgsqlClient.hpp  pull.h  redisClient.hpp  system.hpp
cmd/zmqhandle/src/: main.cpp  pgsqlClient.cpp  pull.cpp  redisClient.cpp
db/: mongo.go  mongo_test.go
note/net/: net.md  squid.conf
rpc/opinterface/: program.go  typeop_string.go
rpc/sunrpc/: clientcodec.go  message_types.go  record.go  servercodec.go
